--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
                      <li>
                         <a href="https://linkedin.com/fulyagursel" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name"></span></a>
                     </li>
+                    <li>
+                        <a href="https://www.behance.net/daffodil" class="btn btn-default btn-lg"><i class="fa fa-behance fa-fw"></i> <span class="network-name"></span></a>
+                    </li>
                 </ul>
             </div>
         </div>
