--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
+               <p align="center"><img src="/img/fulyagursel.png" alt="Fulya Gürsel" width="300" height="300"></p>
                 <h2>HAKKIMDA</h2>
-                <p>1987 yılında soğuk bir şubat günü doğmuşum. O sene kar epey yağmış. Neyse bu kısmı kısa kesiyorum. Balık Burcuyum. Evliyim. Sakin, uyumlu ve evcimen bir yapıya sahibim. Müzik, sinema, teknoloji ve hayal kurmak en sevdiğim şeyler. Ayrıca seyahat etmek, kediler ve bilimum sevimli şey beni mutlu eden şeyler. Liseden itibaren bilgisayar üzerine eğitim aldım. 8 senelik bir web dünyası geçmişim var.</p>
+                <p>1987 yılında soğuk bir şubat günü doğmuşum. O sene kar epey yağmış. Neyse bu kısmı kısa kesiyorum. Balık Burcuyum. Evliyim. Sakin, uyumlu ve evcimen bir yapıya sahibim. Müzik, sinema, teknoloji ve hayal kurmak en sevdiğim şeyler. Ayrıca seyahat etmek, kediler, puzzle, takı tasarımı, ıvır zıvır şey yüzüme güldüren diğer şeyler. Liseden itibaren bilgisayar üzerine eğitim aldım. 8 senelik bir web dünyası geçmişim var.</p>
             </div>
         </div>
     </section>
@@ -112,9 +113,6 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>İLETİŞİM</h2>
-                <p>Bana merhaba demek için</p>
-                <p><a href="mailto:email@fulya.ca">email@fulya.ca</a>
-                </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
                         <a href="https://twitter.com/liludori" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name"></span></a>
@@ -152,9 +150,6 @@
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
 
     <!-- Theme JavaScript -->
     <script src="js/grayscale.min.js"></script>
