--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">ABOUT ME</a>
+                        <a class="page-scroll" href="#about">ABOUT</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">CONTACT ME</a>
+                        <a class="page-scroll" href="#contact">CONTACT</a>
                     </li>
                 </ul>
             </div>
@@ -97,7 +97,7 @@
     <section id="contact" class="container content-section text-center last-one">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>CONTACT ME</h2>
+                <h2>CONTACT</h2>
                 <ul class="list-inline banner-social-buttons">
                     <li>
                         <a href="https://twitter.com/liludori" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name"></span></a>
