--- a/index.html
+++ b/index.html
@@ -100,19 +100,19 @@
                 <h2>CONTACT</h2>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://twitter.com/liludori" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name"></span></a>
+                        <a href="https://twitter.com/liludori" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-twitter fa-fw"></i> <span class="network-name"></span></a>
                     </li>
                     <li>
-                        <a href="https://github.com/liludori" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name"></span></a>
+                        <a href="https://github.com/liludori" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-github fa-fw"></i> <span class="network-name"></span></a>
                     </li>
                     <li>
-                        <a href="https://instagram.com/liludori" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name"></span></a>
+                        <a href="https://instagram.com/liludori" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-instagram fa-fw"></i> <span class="network-name"></span></a>
                     </li>
                      <li>
-                        <a href="https://linkedin.com/fulyagursel" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name"></span></a>
+                        <a href="https://www.linkedin.com/in/fulyaagursel" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name"></span></a>
                     </li>
                     <li>
-                        <a href="https://www.behance.net/daffodil" class="btn btn-default btn-lg"><i class="fa fa-behance fa-fw"></i> <span class="network-name"></span></a>
+                        <a href="https://www.behance.net/daffodil" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-behance fa-fw"></i> <span class="network-name"></span></a>
                     </li>
                 </ul>
             </div>
