--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; fulyagursel.com 2016</p>
+            <p>Copyright &copy; 2016 fulyagursel.com</p>
         </div>
     </footer>
 
