--- a/index.html
+++ b/index.html
@@ -2,37 +2,29 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Hello, I'm Fulya. I'm ui designer and developer">
     <meta name="author" content="Fulya Gürsel">
-
     <title>fulya gürsel | UI Designer & Developer</title>
-
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-
     <!-- Theme CSS -->
     <link href="css/grayscale.min.css" rel="stylesheet">
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-
     <!-- Navigation -->
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
@@ -41,10 +33,9 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> 
+                    <i class="fa fa-play-circle"></i>
                 </a>
             </div>
-
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                 <ul class="nav navbar-nav">
@@ -64,7 +55,6 @@
         </div>
         <!-- /.container -->
     </nav>
-
     <!-- Intro Header -->
     <header class="intro">
         <div class="intro-body">
@@ -81,18 +71,17 @@
             </div>
         </div>
     </header>
-
     <!-- About Section -->
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-               <p align="center"><img src="/img/fulyagursel.png" alt="Fulya Gürsel" width="300" height="300"></p>
+                <p align="center"><img src="/img/fulyagursel.png" alt="Fulya Gürsel" width="300" height="300"></p>
                 <h2>ABOUT</h2>
-                <p>Hello, I'm Fulya. I live in Istanbul. I'm interested in ui designing and developing. I have 8 years experience working with front-end development and ui designing. I enjoy reading, listening my favorites songs, watching movies, doing crafts and loving my husband :) <br>You can hire me freelance projects.</p>
+                <p>Hello, I'm Fulya. I live in Istanbul. I'm interested in ui designing and developing. I have 8 years experience working with front-end development and ui designing. I enjoy reading, listening my favorites songs, watching movies, doing crafts and loving my husband :)
+                    <br>You can hire me freelance projects.</p>
             </div>
         </div>
     </section>
-
     <!-- Contact Section -->
     <section id="contact" class="container content-section text-center last-one">
         <div class="row">
@@ -108,7 +97,7 @@
                     <li>
                         <a href="https://instagram.com/liludori" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-instagram fa-fw"></i> <span class="network-name"></span></a>
                     </li>
-                     <li>
+                    <li>
                         <a href="https://www.linkedin.com/in/fulyaagursel" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name"></span></a>
                     </li>
                     <li>
@@ -124,27 +113,36 @@
             </div>
         </div>
     </section>
-
-
     <!-- Footer -->
     <footer>
         <div class="container text-center">
             <p>Copyright &copy; 2016 fulyagursel.com</p>
         </div>
     </footer>
-
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.js"></script>
-
     <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
     <!-- Theme JavaScript -->
     <script src="js/grayscale.min.js"></script>
+    <script>
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
+    ga('create', 'UA-85731102-1', 'auto');
+    ga('send', 'pageview');
+    </script>
 </body>
 
 </html>
