--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; 2016 fulyagursel.com</p>
+            <p>Copyright &copy; 2016 fulyagursel.com - Powered by Jekyll</p>
         </div>
     </footer>
     <!-- jQuery -->
