--- a/eduser/index.html
+++ b/eduser/index.html
@@ -12,6 +12,7 @@
       }
       body { 
       background:url(01-eduser-home.jpg) no-repeat top center; 
+      width:1800px;
       min-height:2800px;
       }
     </style>
