--- a/eduser/index.html
+++ b/eduser/index.html
@@ -11,7 +11,7 @@
         margin:0;
       }
       body { 
-      background:url(01-eduser-home.jpg) no-repeat top center; 
+      background:url(01-eduser-home.jpg) no-repeat; 
       width:1800px;
       min-height:2800px;
       }
