--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <p align="center"><img src="/img/fulyagursel.png" alt="Fulya Gürsel" width="300" height="300"></p>
                 <h2>ABOUT</h2>
-                <p>Hello, I'm Fulya. I live in Austin/TX. I'm interested in ui designing and developing. I have 10 years experience working with front-end development and ui designing. I enjoy reading, listening my favorites songs, watching movies, doing crafts and loving my husband :)
+                <p>Hello, I'm Fulya. I live in Austin/TX. I'm interested in ui designing and developing. I have 10 years experience working with front-end development and ui designing. I enjoy reading, listening my favorites songs, watching movies, doing crafts and loving my son & husband :)
                     <br>You can hire me freelance projects.</p>
             </div>
         </div>
